# textColor

./: README.md  pyproject.toml  setup.py
docs/: PyPi-upload.md
test/: test_textColor.py
textColor/: __init__.py
textColor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
textColor/textColor.egg-info/: PKG-INFO
