[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textColor"
version = "3.0.1"
authors = [
  { name="Jannik Ramrath", email="jannik@ramrath.me" },
]
description = "This is an easy to use Python library which allows you to make your terminal outputs more colorful and therefore easier to read and understand "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jramrath/textColor"
"Bug Tracker" = "https://github.com/jramrath/textColor/issues"
